--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
+    "axios": "^0.19.2",
+    "bootstrap-vue": "^2.9.0",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
+    "vue-js-modal": "^1.3.33",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.1.5",
+    "vuelidate": "^0.7.5",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
