--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "bootstrap-vue": "^2.9.0",
     "core-js": "^3.6.4",
+    "v-toaster": "^1.0.3",
     "vue": "^2.6.11",
     "vue-js-modal": "^1.3.33",
     "vue-notification": "^1.3.20",
